[gd_scene load_steps=6 format=1]

[ext_resource path="res://logic/generator.gd" type="Script" id=1]
[ext_resource path="res://resource/graphics/generator.png" type="Texture" id=2]
[ext_resource path="res://resource/graphics/rays_anim_25x56_3.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5.591, 21.1328 )

[sub_resource type="Animation" id=2]

resource/name = "electricity"
length = 0.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("electricity/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0.1, 0.2, 0.3 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ Rect2( 0, 0, 25, 56 ), Rect2( 25, 0, 25, 56 ), Rect2( 50, 0, 25, 56 ) ] }

[node name="generator" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }
time_to_on = 2
time_to_off = 3

[node name="gens" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="electricity" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="electricity"]

texture = ExtResource( 3 )
region = true
region_rect = Rect2( 50, 0, 25, 56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="electricity"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/electricity = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="timer_on" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="timer_off" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="timeout" from="timer_on" to="." method="_on_timer_on_timeout"]

[connection signal="timeout" from="timer_off" to="." method="_on_timer_off_timeout"]


